[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/NanumPenScript-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Register.gd" type="Script" id=2]
[ext_resource path="res://Images/Others/Normal/home-solid.png" type="Texture" id=3]
[ext_resource path="res://Images/Others/Normal/Register.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Varela-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Images/Others/Pressed/REGISTER-PixTeller.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 1 )

[node name="Register" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.929412, 0.929412, 0.929412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Node2D" parent="."]

[node name="HomeButton" type="TextureButton" parent="UI"]
margin_left = 490.0
margin_top = 20.0
margin_right = 550.0
margin_bottom = 80.0
rect_min_size = Vector2( 60, 60 )
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UI"]
margin_top = 100.0
margin_right = 576.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Register"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notification" type="Label" parent="UI"]
margin_left = 30.0
margin_top = 200.0
margin_right = 546.0
margin_bottom = 270.0
rect_min_size = Vector2( 516, 70 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
margin_left = 30.0
margin_top = 340.0
margin_right = 546.0
margin_bottom = 690.0
rect_min_size = Vector2( 516, 350 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Email" type="LineEdit" parent="UI/VBoxContainer"]
margin_right = 516.0
margin_bottom = 80.0
rect_min_size = Vector2( 516, 80 )
custom_fonts/font = SubResource( 3 )
align = 1
placeholder_text = "Enter email"

[node name="Password" type="LineEdit" parent="UI/VBoxContainer"]
margin_top = 90.0
margin_right = 516.0
margin_bottom = 170.0
rect_min_size = Vector2( 516, 80 )
custom_fonts/font = SubResource( 3 )
align = 1
secret = true
placeholder_text = "Enter password"

[node name="ConfirmPassword" type="LineEdit" parent="UI/VBoxContainer"]
margin_top = 180.0
margin_right = 516.0
margin_bottom = 260.0
rect_min_size = Vector2( 516, 80 )
custom_fonts/font = SubResource( 3 )
align = 1
secret = true
placeholder_text = "Confirm password"

[node name="RegisterButton" type="TextureButton" parent="UI/VBoxContainer"]
margin_top = 270.0
margin_right = 516.0
margin_bottom = 350.0
rect_min_size = Vector2( 516, 80 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="UI/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
